--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,8 +17,9 @@
 
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">top</a>
+ああああ
+            <h1 class="title"><a href="{{ site.baseurl }}">{{ site.name }}</a></h1>
+            <a class="extra" href="{{ site.baseurl }}">top</a>
           </div>
 
           {{ content }}
