Add FontAwesome and Reset CSS

--- a/_figures/assets/scss/style.scss
+++ b/_figures/assets/scss/style.scss
@@ -1,5 +1,13 @@
 @charset 'utf-8';
 
+@import 'ress';
+
+// FontAwesome
+@import 'brands';
+@import 'regular';
+@import 'solid';
+@import 'fontawesome';
+
 @import 'variables';
 @import 'mixin';
 
