WIP: Add two figures. smallest-app

--- a/_figures/assets/scss/_mixin.scss
+++ b/_figures/assets/scss/_mixin.scss
@@ -1,9 +1,17 @@
 /* ----------------------------------------------------------
 /* Font Awesome
 /* ---------------------------------------------------------- */
-// @mixin fa {
-//   font-family: ''
-// }
+@mixin fa {
+  font-family: 'Font Awesome 5 Free';
+  line-height: 1;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
 
 /* ----------------------------------------------------------
 /* media query
