--- a/_figures/assets/scss/common/_common.scss
+++ b/_figures/assets/scss/common/_common.scss
@@ -12,6 +12,7 @@ article,aside,canvas,footer,header,menu,nav,section,main {
 }
 
 .wrapper {
+  max-width: 600px;
   margin: 30px;
   * + * {
     margin-top: 0.5em;
