--- a/_figures/assets/scss/item/_box.scss
+++ b/_figures/assets/scss/item/_box.scss
@@ -38,24 +38,8 @@
   width: 6em;
 }
 
-.box__opacity {
+.opacity {
   opacity: 0.3;
-}
-
-.box__list {
-  margin-top: 1em;
-}
-
-.box__item {
-  margin: 0;
-  &::before {
-    @include fa;
-    font-weight: 900;
-    content: '\f105';
-    margin: 0 6px;
-    font-size: 130%;
-    color: $accent-color;
-  }
 }
 
 .icon__file {
