Add コードとコメント・フォルダ構成 p.26, 28

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -21,6 +21,7 @@ $base-color-5: #B8EEFF;
 $arrow-color: #CF562C;
 $main-color: #CF562C;
 $accent-color: #69C0E0;
+$folder-color: #FFB369;
 
 // 以下使ってない
 $main-sub-color: #fce4ec;
