--- a/_figures/assets/scss/item/_box.scss
+++ b/_figures/assets/scss/item/_box.scss
@@ -36,11 +36,15 @@
 
 .box__flex {
   display: flex;
+  align-items: center;
   &.is-large {
     // migration 模式図で使用
     margin: 0.65em auto 0;
-    align-items: center;
     width: 70%;
+  }
+  &.is-align-top {
+    justify-content: space-between;
+    align-items: normal;
   }
 }
 
@@ -50,10 +54,14 @@
     // コマンドの背景色を右側まで伸ばす
     flex-grow: 2;
   }
-  &.is-minus-margin {
-    // 1行表示の場合の位置調整
-    margin-top: -7px;
+  &.is-left-margin {
+    margin-left: 1em;
   }
+}
+
+.box__flex-column-half {
+  width: calc(50% - 1em);
+  margin: 0;
 }
 
 .box__no-bg {
