--- a/_figures/assets/scss/item/_command.scss
+++ b/_figures/assets/scss/item/_command.scss
@@ -3,14 +3,13 @@
 /* コマンドの部品
 /* ---------------------------------------------------------- */
 
-$command-padding: 0 0.5em; 
+$command-padding: 0.5em; 
 .command {
   background: $base-color-3;
-  padding: $command-padding;
+  padding: 0 $command-padding;
   font-family: monospace;
 }
 
 .command__no-bg {
   margin: 0;
-  padding: $command-padding;
 }
