Add figure crud（画像ダミー）

--- a/_figures/assets/scss/item/_box.scss
+++ b/_figures/assets/scss/item/_box.scss
@@ -19,7 +19,7 @@
   &.crud-box {
     background: $base-color-light-3;
     border: 1px solid $base-color-3;
-    padding: 0.5em 1em;
+    padding: 0.5em 1em 1em;
   }
   &.code-box {
     background: $base-color-light-4;
