WIP Add figure sample formのコードと表示の対応図 p.69〜

--- a/_figures/assets/scss/_mixin.scss
+++ b/_figures/assets/scss/_mixin.scss
@@ -42,3 +42,10 @@
     @content;
   }
 }
+
+/* ----------------------------------------------------------
+/* font
+/* ---------------------------------------------------------- */
+@mixin font-family {
+  font-family: 'Hiragino Sans', sans-serif; // Catalina対策
+}
