Fix figure formのコードと表示の対応図

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -18,8 +18,8 @@ $base-color-3: #FFE975;
 $base-color-4: #BCEDA1;
 $base-color-5: #B8EEFF;
 
-$arrow-color: #CF562C;
-$main-color: #CF562C;
+$main-color: #cf2c2c;
+$arrow-color: $main-color;
 $accent-color: #69C0E0;
 $folder-color: #FFB369;
 
