--- a/_figures/assets/scss/item/_arrow.scss
+++ b/_figures/assets/scss/item/_arrow.scss
@@ -1,6 +1,6 @@
 /* ----------------------------------------------------------
 /* arrow
-/* 矢印
+/* 上から下に向かう矢印
 /* ---------------------------------------------------------- */
 
 $arrow-width-value: 50px;
