--- a/_figures/assets/scss/style.scss
+++ b/_figures/assets/scss/style.scss
@@ -22,6 +22,7 @@
 @import 'item/box';
 @import 'item/list';
 @import 'item/arrow';
+@import 'item/arrow-right';
 @import 'item/code';
 @import 'item/files';
 @import 'item/text';
