Add figure new-view-form-title-html

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -20,7 +20,7 @@ $base-color-5: #B8EEFF;
 
 $main-color: #cf2c2c;
 $arrow-color: $main-color;
-$accent-color: #69C0E0;
+$accent-color: #0b72b3;
 $folder-color: #FFB369;
 
 // 以下使ってない
