fix figures  form parts and terminal color

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -10,18 +10,31 @@ $base-color-light-1: #FFEBEB;
 $base-color-light-2: #FFF2DC;
 $base-color-light-3: #FFFBC6;
 $base-color-light-4: #E7FCDC;
+// $base-color-light-4: #fcfcfc;
 $base-color-light-5: #E3F9FF;
 
 $base-color-1: #FFBDBD;
 $base-color-2: #FFD28A;
 $base-color-3: #FFE975;
 $base-color-4: #BCEDA1;
+// $base-color-4: #d6d6d6;
 $base-color-5: #B8EEFF;
 
 $main-color: #cf2c2c;
 $arrow-color: $main-color;
 $accent-color: #0b72b3;
+
+// フォルダアイコンの色
 $folder-color: #FFB369;
+
+// コマンド地の装飾
+$command-color-light: #d8d8d8;
+$command-color: #777;
+
+// フォーム解説図の枠と矢印の色
+$form-border-color-1: #ffbce9;
+$form-border-color-2: #78d6fe;
+$form-border-color-3: #96ea9a;
 
 // 以下使ってない
 $main-sub-color: #fce4ec;
