change arrow in form figure

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -40,9 +40,9 @@ $command-color-light: #d8d8d8;
 $command-color: #777;
 
 // フォーム解説図の枠と矢印の色
-$form-border-color-1: #ffbce9;
-$form-border-color-2: #78d6fe;
-$form-border-color-3: #96ea9a;
+$form-border-color-1: #ee8ecc;
+$form-border-color-2: #56baee;
+$form-border-color-3: #48c772;
 
 $line-color: lighten($text-color, 50%);
 
