--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,17 @@ a:visited { color: #a0a; }
   line-height: 1.5em;
 }
 
+@media (max-width: 480px) {
+  .site {
+    width: 100%;
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+  .post {
+    width: calc(100% - 1em);
+  }
+}
+
 .header a {
   font-weight: bold;
   text-decoration: none;
@@ -134,6 +145,12 @@ a:visited { color: #a0a; }
   padding: 0 .4em;
 }
 
+@media (max-width: 480px) {
+  .post pre {
+    overflow-x: auto;
+  }
+}
+
 .post ul, .post ol {
   margin-left: 1.35em;
 }
@@ -172,6 +189,10 @@ h2 {
 h3 {
   font-size: 140%;
   margin: 32px 0px 32px;
+}
+
+.post h1, .post h2, .post h3 {
+  line-height: 1.3;
 }
 
 /* Ruby */
