change color to darken in figures

--- a/_figures/assets/scss/_variables.scss
+++ b/_figures/assets/scss/_variables.scss
@@ -13,15 +13,15 @@ $text-color: #333;
 // 背景
 $base-color-light-1: #FFEBEB;
 $base-color-light-2: #FFF2DC;
-$base-color-light-3: #FFFBC6;
-$base-color-light-4: #E7FCDC;
-$base-color-light-5: #E3F9FF;
+$base-color-light-3: #fdecb9;
+$base-color-light-4: #e0fbd1;
+$base-color-light-5: #cdf3fd;
 
-$base-color-1: #FFBDBD;
+$base-color-1: #ffaeae;
 $base-color-2: #FFD28A;
-$base-color-3: #FFE975;
-$base-color-4: #BCEDA1;
-$base-color-5: #B8EEFF;
+$base-color-3: #fbd256;
+$base-color-4: #9cd87b;
+$base-color-5: #96c9da;
 
 // グレー地
 // $base-color-light-4: #fcfcfc;
@@ -29,7 +29,7 @@ $base-color-5: #B8EEFF;
 
 // 強調色
 $main-color: #cf2c2c;
-$arrow-color: $main-color;
+$arrow-color: #d55151;
 $accent-color: #0b72b3;
 
 // フォルダアイコンの色
